

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

10-Sep-2009 Ercan Ozkaya
 ^ Localised invalid token messages

08-Sep-2009 Ron Severdia
 # BlueStork fixes
 ^ Moved Media Manager folder field to bottom
 $ Language consistency fixes
 ^ -> Updated toolbar icons

31-Aug-2009 Ron Severdia
 # BlueStork fixes
 $ Language consistency fixes
 - Removed unnecessary radio buttons in new module
 - Removed unused Tools menu from top menu

22-Aug-2009 Ron Severdia
 # BlueStork fixes
 $ Added missing language strings
 + New icon for Menu Manager in top menu

19-Aug-2009 Sam Moffatt
 # [#17680] Menu links not working for 3rd party components thanks to Matias Aguirre

13-Aug-2009 Gergo Erdosi
 ^ Deprecated JToolBarHelper functions: customX, addNewX, editListX, editHtmlX, editCssX and deleteListX.
 - Removed $hideMenu parameter of JButtonStandard->fetchButton.
 ^ Changed deprecated JToolBarHelper function calls in core components.
 ^ Replaced JQueryElement toString() method by __toString magic method.
 # Fixed bug pagination getPagesCounter() method.
 ^ Changed database $_resource variable to $_connection.
 # Fixed JDatabaseMySQLi __destruct() method.
 - Removed value returning in database drivers __destruct() methods.
 - Removed legacy.js file.
 ^ Moved /images/joomla/ to /images/system/.

12-Aug-2009 Gergo Erdosi
 ^ Removed legacy code from the .htaccess file.
 ^ Updated robots.txt to the current directory structure.
 ^ Replaced com_languages with its refactored version.
 ! Thanks to Christophe Demko for helping refactor the com_languages component.
 ^ Replaced com_messages with its refactored version.
 ! Thanks to Joe LeBlanc for helping refactor the com_messages component.